fix z-index header

--- a/assets/css/tinet-style.css
+++ b/assets/css/tinet-style.css
@@ -138,7 +138,7 @@ strong{
   background: #FFFFFF;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
   border-radius: 8px;
-  z-index: 40;
+  z-index: 50;
 }
 .btn-nav > ul.tr-ul > li:last-child{
   padding-right: 0px;
